pycon_project/static/2013/css/custom.css
body {
    background: url(../img/bg-repeat.jpg);
    font-family: "新細明體";
    color: #878787;
}

p, .content li {
    /* Bootstrap v2.0.1 Styles */
    margin: 0 0 9px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 13px;
    line-height: 18px;
}

#body {
    margin: 10px 0px;
    min-height: 400px;
}

#whatispycon {
    color: #555;
    background: rgba(55, 111, 145, .1);
    padding: 10px 20px;
    border-radius: 5px;
    margin-bottom: 30px;
}

#whatispycon p {
    font-size: 1.2em;
    line-height: 1.6em;
}

#sponsor_button {
    font-family: 'Droid Sans Mono';
    text-align: left;
    margin: 1.5em;
}

.sponsor {
    text-align: center;
    margin-bottom: 10px;
}

.account-bar {
    text-align: right;
    margin: 10px 0px;
}

.site-logo {
    max-width: 100%;
}

a.boxes-edit-link {
    display: none;
}

h1, h2, h3 {
    margin: 20px 0px 5px 0px;
    padding-bottom: 10px;
    font-family: '微軟正黑體', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

form ul {
    list-style: none;
    margin: 0px;
}

form ul li label input {
    display: inline;
}

header {
    background-color: white;
    font-family: '微軟正黑體', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.nav {
    font-size: 18px;
}

.navbar .nav > li > a {
    text-shadow: none;
}

.navbar .nav > li > a:hover {
    color: inherit;
}

.banner {
    height: 327px;
    overflow: hidden;
}

.banner .images {
    background-image: url(../img/mkv.jpg);
    margin-left: -500px;
    width: 1920px;
    height: 327px;
}

.banner_caption {
    padding: 10px 20px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    color: rgb(3, 137, 164);
}

.banner_caption p {
    font-size: 1.5em;
    line-height: 1.25em;
    font-family: '微軟正黑體', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.brick {
    background-color: white;
    margin-top: 10px;
    margin-bottom: 10px;

    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;
}

.brick.first {
    height: 275px;
}

.blog-post div.teaser {
  word-wrap:break-word;
}

.brick {
    height: 200px;
}

.sponsor_brick {
    background-color: white;
    margin-top: 10px;
    margin-bottom: 10px;

    -webkit-border-radius: 15px;
    -moz-border-radius: 15px;
    border-radius: 15px;

    height:300px;
}

.blog-post {
    margin: 0 20px;
}

.blog-post h1 {
    font-size: 36px;
}

.blog-post h2 {
    color: #0085a3;
    word-wrap: break-word;
    font-size: 20px;
    line-height: 1.5;
}

.blog-post h2 a {
    color: #0086a2;
}

.blog-post .emphasis {
    color: #e3543b;
}

#venue-map {
    background: #fff;
    padding: 10px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: 1px dashed #ccc;
}

#head-desc {
    text-align: center;
    color: rgb(55, 111, 145);
    margin: 30px 0px;
}

#head-desc .date {
    font-size: 3em;
    line-height: 1.5em;
}

#head-desc .address {
    color: #c61d1b;
    font-size: 2em;
    line-height: 1em;
    margin-left: 50px;
}

#pycon_intro {
    font-size: 1.1em;
    line-height: 1.5;
}

#sponsor_logos {
    text-align: center;
    vertical-align: baseline;
    clear: both;
}

#sponsor_logos img {
    margin: 1em;
}

footer {
    text-align: center;
    margin-top: 100px;
    padding: 10px;
    border-top: 1px solid #eee;
}

footer img {
    margin: 10px;
}

